devel/libvirt-glib: Update MASTER_SITES
ftp service is no longer available

Approved by:	portmgr (blanket)

--- a/devel/libvirt-glib/Makefile
+++ b/devel/libvirt-glib/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	libvirt-glib
 PORTVERSION=	5.0.0
 CATEGORIES=	devel
-MASTER_SITES=	ftp://libvirt.org/libvirt/glib/
+MASTER_SITES=	https://download.libvirt.org/glib/
 
 MAINTAINER=	novel@FreeBSD.org
 COMMENT=	Glib bindings for Libvirt virtualization API
