devel/libvirt-glib: Remove libtool as dependency
Not used in project

Approved by:	portmgr (blanket)

--- a/devel/libvirt-glib/Makefile
+++ b/devel/libvirt-glib/Makefile
@@ -11,7 +11,7 @@ LICENSE=	GPLv2
 
 LIB_DEPENDS=	libvirt.so:devel/libvirt
 
-USES=		gettext gmake gnome libtool meson pathfix pkgconfig \
+USES=		gettext gmake gnome meson pathfix pkgconfig \
 		python tar:xz
 
 OPTIONS_DEFINE=	DOCS VAPI
