ports: Fix after 771e57d671d9
I missed a step when I renamed devel/xtensa-esp32-elf to
devel/xtensa-esp-elf; update devel/Makefile

PR:		281677
Reported by:	Robert William Vesterman

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -8251,7 +8251,7 @@
     SUBDIR += xpeviewer
     SUBDIR += xsd
     SUBDIR += xsimd
-    SUBDIR += xtensa-esp32-elf
+    SUBDIR += xtensa-esp-elf
     SUBDIR += xtl
     SUBDIR += xtl-quant-stack
     SUBDIR += xwpe
