devel/py-xstatic-autosize: New port
autosize 1.17.2 (XStatic packaging standard)

autosize (jQuery plugin for dynamic textarea sizing) packaged for
setuptools (easy_install) / pip.

This package is intended to be used by **any** project that needs these
files.

It intentionally does **not** provide any extra code except some
metadata **nor** has any extra requirements. You MAY use some minimal
support code from the XStatic base package, if you like.

WWW: https://www.jacklmoore.com/autosize/

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6090,6 +6090,7 @@
     SUBDIR += py-xstatic-angular-gettext
     SUBDIR += py-xstatic-angular-lrdragndrop
     SUBDIR += py-xstatic-angular-schema-form
+    SUBDIR += py-xstatic-autosize
     SUBDIR += py-xstatic-bootstrap
     SUBDIR += py-xstatic-bootstrap3
     SUBDIR += py-xstatic-bootstrap-datepicker
