--- a/editors/ox/Makefile.crates
+++ b/editors/ox/Makefile.crates
@@ -6,12 +6,12 @@ CARGO_CRATES=	aho-corasick-1.1.3 \
 		block-0.1.6 \
 		bstr-1.10.0 \
 		byteorder-1.5.0 \
-		cc-1.1.19 \
+		cc-1.1.21 \
 		cfg-if-1.0.0 \
 		clipboard-win-3.1.1 \
 		copypasta-0.8.2 \
 		copypasta-ext-0.4.4 \
-		crossterm-0.27.0 \
+		crossterm-0.28.1 \
 		crossterm_winapi-0.9.1 \
 		dirs-5.0.1 \
 		dirs-sys-0.4.1 \
@@ -21,6 +21,7 @@ CARGO_CRATES=	aho-corasick-1.1.3 \
 		errno-0.3.9 \
 		gethostname-0.2.3 \
 		getrandom-0.2.15 \
+		hermit-abi-0.3.9 \
 		home-0.5.9 \
 		if_chain-1.0.2 \
 		jargon-args-0.2.7 \
@@ -38,7 +39,7 @@ CARGO_CRATES=	aho-corasick-1.1.3 \
 		memchr-2.7.4 \
 		memmap2-0.5.10 \
 		memoffset-0.6.5 \
-		mio-0.8.11 \
+		mio-1.0.2 \
 		mlua-0.9.9 \
 		mlua-sys-0.6.3 \
 		nix-0.24.3 \
@@ -81,11 +82,12 @@ CARGO_CRATES=	aho-corasick-1.1.3 \
 		str_indices-0.4.3 \
 		sugars-3.0.1 \
 		syn-2.0.77 \
-		synoptic-2.0.4 \
+		synoptic-2.0.5 \
 		thiserror-1.0.63 \
 		thiserror-impl-1.0.63 \
 		unicode-ident-1.0.13 \
-		unicode-width-0.1.13 \
+		unicode-width-0.1.14 \
+		unicode-width-0.2.0 \
 		wasi-0.11.0+wasi-snapshot-preview1 \
 		wayland-client-0.29.5 \
 		wayland-commons-0.29.5 \
