textproc/rubygem-rouge43: Add rubygem-rouge43 4.3.0 (copied from rubygem-rouge)
- Add PORTSCOUT

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1915,6 +1915,7 @@
     SUBDIR += rubygem-ronn
     SUBDIR += rubygem-rouge
     SUBDIR += rubygem-rouge3
+    SUBDIR += rubygem-rouge43
     SUBDIR += rubygem-rttool
     SUBDIR += rubygem-ruby-augeas
     SUBDIR += rubygem-ruby-xslt
