ftp/curl: Add missing LIBUV_DESC

--- a/ftp/curl/Makefile
+++ b/ftp/curl/Makefile
@@ -65,6 +65,7 @@ LIBSSH_DESC=	SCP/SFTP support via libssh (requires OPENSSL)
 LIBSSH_IMPLIES=	OPENSSL
 LIBSSH2_DESC=	SCP/SFTP support via libssh2 (requires OPENSSL)
 LIBSSH2_IMPLIES=OPENSSL
+LIBUV_DESC=	Event-based tests
 MQTT_DESC=	MQTT support
 POP3_DESC=	POP3/POP3S support
 PROXY_IMPLIES=	HTTP
