net/libngtcp2-gnutls: Add libngtcp2-gnutls 1.7.0
ngtcp2 project is an effort to implement QUIC protocol which is now being
discussed in IETF QUICWG for its standardization.

This port provides the crypto helper library for gnutls backend.

--- a/net/Makefile
+++ b/net/Makefile
@@ -396,6 +396,7 @@
     SUBDIR += libnet
     SUBDIR += libnfs
     SUBDIR += libngtcp2
+    SUBDIR += libngtcp2-gnutls
     SUBDIR += libnids
     SUBDIR += libnpupnp
     SUBDIR += libnss-cache
