devel/json-c: Convert to USES=cmake:testing

--- a/devel/json-c/Makefile
+++ b/devel/json-c/Makefile
@@ -11,7 +11,7 @@ WWW=		https://github.com/json-c/json-c/wiki
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/COPYING
 
-USES=		cmake compiler:c11 cpe pathfix
+USES=		cmake:testing compiler:c11 cpe pathfix
 
 CMAKE_OFF=	DISABLE_BSYMBOLIC \
 		DISABLE_JSON_PATCH \
@@ -20,13 +20,11 @@ CMAKE_OFF=	DISABLE_BSYMBOLIC \
 		DISABLE_THREAD_LOCAL_STORAGE \
 		ENABLE_RDRAND \
 		ENABLE_THREADING \
-		NEWLOCALE_NEEDS_FREELOCALE \
 		OVERRIDE_GET_RANDOM_SEED
 CMAKE_ON=	BUILD_SHARED_LIBS \
 		BUILD_STATIC_LIBS \
 		DISABLE_EXTRA_LIBS \
 		DISABLE_WERROR
-TEST_TARGET=	test
 USE_LDCONFIG=	yes
 
 CPE_VENDOR=	json-c_project
