x11/swww: Add new port
Efficient animated wallpaper daemon for wayland, controlled at runtime.

Features

    - Display animated gifs on your desktop
    - Display any image in the formats:
        - jpeg
        - png
        - gif
        - pnm
        - tga
        - tiff
        - webp
        - bmp
        - farbfeld
    - Clear the screen with an arbitrary rrggbb color
    - Smooth transition effect when you switch images
    - Do all of that without having to shutdown and reinitialize the daemon

https://github.com/LGFae/swww

--- a/x11/Makefile
+++ b/x11/Makefile
@@ -427,6 +427,7 @@
     SUBDIR += swayr
     SUBDIR += swayrbar
     SUBDIR += swaysettings
+    SUBDIR += swww
     SUBDIR += sxhkd
     SUBDIR += sxmo-wayout
     SUBDIR += sxpc
