textproc/py-sphinxcontrib-nwdiag: new port had been added (+)
Sphinx extension for embedding network-related diagrams via nwdiag.

WWW: https://github.com/blockdiag/sphinxcontrib-nwdiag

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1627,6 +1627,7 @@
     SUBDIR += py-sphinxcontrib-log-cabinet
     SUBDIR += py-sphinxcontrib-napoleon
     SUBDIR += py-sphinxcontrib-newsfeed
+    SUBDIR += py-sphinxcontrib-nwdiag
     SUBDIR += py-sphinxcontrib-programoutput
     SUBDIR += py-sphinxcontrib-qthelp
     SUBDIR += py-sphinxcontrib-serializinghtml
