devel/py-xstatic-ckeditor:
CKEditor 3.6.4 (XStatic packaging standard)

CKEditor packaged for setuptools (easy_install) / pip.

This package is intended to be used by any project that needs these
files.

It intentionally does not provide any extra code except some metadata
nor has any extra requirements. You MAY use some minimal support code
from the XStatic base package, if you like.

WWW: https://ckeditor.com

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6097,6 +6097,7 @@
     SUBDIR += py-xstatic-bootstrap-scss
     SUBDIR += py-xstatic-bootstrap3
     SUBDIR += py-xstatic-bootswatch
+    SUBDIR += py-xstatic-ckeditor
     SUBDIR += py-xstatic-d3
     SUBDIR += py-xstatic-font-awesome
     SUBDIR += py-xstatic-hogan
