--- a/graphics/mesa-devel/Makefile
+++ b/graphics/mesa-devel/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mesa
-DISTVERSION=	24.2-branchpoint-3120
-DISTVERSIONSUFFIX=	-g6b83d498791
+DISTVERSION=	24.2-branchpoint-3263
+DISTVERSIONSUFFIX=	-ga8eed9cca26
 CATEGORIES=	graphics
 PKGNAMESUFFIX=	-devel
 
