devel/rubygem-aws-sdk-directoryservicedata: Add rubygem-aws-sdk-directoryservicedata 1.0.0
Official AWS Ruby gem for AWS Directory Service Data.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6494,6 +6494,7 @@
     SUBDIR += rubygem-aws-sdk-devopsguru
     SUBDIR += rubygem-aws-sdk-directconnect
     SUBDIR += rubygem-aws-sdk-directoryservice
+    SUBDIR += rubygem-aws-sdk-directoryservicedata
     SUBDIR += rubygem-aws-sdk-dlm
     SUBDIR += rubygem-aws-sdk-docdb
     SUBDIR += rubygem-aws-sdk-docdbelastic
