devel/py-jaraco.envs: Add py-jaraco.envs 2.6.0
This library provides the classes for orchestrating Python (virtual)
environments.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5019,6 +5019,7 @@
     SUBDIR += py-jaraco.collections
     SUBDIR += py-jaraco.context
     SUBDIR += py-jaraco.env
+    SUBDIR += py-jaraco.envs
     SUBDIR += py-jaraco.functools
     SUBDIR += py-jaraco.itertools
     SUBDIR += py-jaraco.logging
