net/Makefile: hook haproxy29.

--- a/net/Makefile
+++ b/net/Makefile
@@ -243,6 +243,7 @@
     SUBDIR += haproxy26
     SUBDIR += haproxy27
     SUBDIR += haproxy28
+    SUBDIR += haproxy29
     SUBDIR += hblock
     SUBDIR += hexinject
     SUBDIR += hlmaster
