--- a/devel/Makefile
+++ b/devel/Makefile
@@ -7,6 +7,7 @@
     SUBDIR += R-cran-Hmisc
     SUBDIR += R-cran-ModelMetrics
     SUBDIR += R-cran-R.methodsS3
+    SUBDIR += R-cran-R.oo
     SUBDIR += R-cran-R6
     SUBDIR += R-cran-RUnit
     SUBDIR += R-cran-Rcpp
