devel/R-cran-R.utils: New port
Utility functions useful when programming and developing R packages.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -8,6 +8,7 @@
     SUBDIR += R-cran-ModelMetrics
     SUBDIR += R-cran-R.methodsS3
     SUBDIR += R-cran-R.oo
+    SUBDIR += R-cran-R.utils
     SUBDIR += R-cran-R6
     SUBDIR += R-cran-RUnit
     SUBDIR += R-cran-Rcpp
