games/gobang: add PKGNAMESUFFIX to not collide with databases/gobang
Fixes:		312e909f61fa1f7533af565e4f6f09b5f6240510
Reported by:	antoine

--- a/games/gobang/Makefile
+++ b/games/gobang/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	gobang
 DISTVERSION=	0.1
 CATEGORIES=	games
+PKGNAMESUFFIX=	-game
 
 MAINTAINER=	guoqiang_cn@126.com
 COMMENT=	This is a Gobang game that runs in the console
