x11-toolkits/py-kivy: resurrect the port and update to version 2.3.0
Refresh dependencies and convert to USES=+pytest (this also allows to
drop `do-test' target).  Unfortunately, not all tests currently pass:

  15 failed, 788 passed, 42 skipped, 1 xfailed, 8 warnings, 70 errors

Requested by:	Sergey V. Dyatko

--- a/x11-toolkits/Makefile
+++ b/x11-toolkits/Makefile
@@ -174,6 +174,7 @@
     SUBDIR += py-easygui
     SUBDIR += py-fltk
     SUBDIR += py-guietta
+    SUBDIR += py-kivy
     SUBDIR += py-python-xlib
     SUBDIR += py-qt5-chart
     SUBDIR += py-qt6-chart
