devel/py-textualeffects: Add new port
Visual effects for Textual, a TerminalTextEffects wrapper.
It is a library that provides Textual bindings for the excellent
TerminalTextEffects visual effects library.

https://github.com/ggozad/textualeffects

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5925,6 +5925,7 @@
     SUBDIR += py-testresources
     SUBDIR += py-testscenarios
     SUBDIR += py-testtools
+    SUBDIR += py-textualeffects
     SUBDIR += py-thefuzz
     SUBDIR += py-thinc
     SUBDIR += py-thinc8
