--- a/sysutils/mise/Makefile
+++ b/sysutils/mise/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mise
 DISTVERSIONPREFIX=	v
-DISTVERSION=	2024.9.9
+DISTVERSION=	2024.9.10
 CATEGORIES=	sysutils
 
 MAINTAINER=	yuri@FreeBSD.org
@@ -135,7 +135,7 @@ CARGO_CRATES=	addr2line-0.21.0 \
 		filetime-0.2.25 \
 		filetime_creation-0.2.0 \
 		fixedbitset-0.4.2 \
-		flate2-1.0.33 \
+		flate2-1.0.34 \
 		float-cmp-0.9.0 \
 		fnv-1.0.7 \
 		foreign-types-0.3.2 \
@@ -341,7 +341,7 @@ CARGO_CRATES=	addr2line-0.21.0 \
 		serde_derive-1.0.210 \
 		serde_ignored-0.1.10 \
 		serde_json-1.0.128 \
-		serde_spanned-0.6.7 \
+		serde_spanned-0.6.8 \
 		serde_urlencoded-0.7.1 \
 		servo_arc-0.3.0 \
 		sevenz-rust-0.6.1 \
@@ -386,7 +386,7 @@ CARGO_CRATES=	addr2line-0.21.0 \
 		tendril-0.4.3 \
 		tera-1.20.0 \
 		termcolor-1.4.1 \
-		terminal_size-0.3.0 \
+		terminal_size-0.4.0 \
 		termtree-0.4.1 \
 		test-case-3.3.1 \
 		test-case-core-3.3.1 \
@@ -433,7 +433,7 @@ CARGO_CRATES=	addr2line-0.21.0 \
 		untrusted-0.9.0 \
 		url-2.5.2 \
 		urlencoding-2.1.3 \
-		usage-lib-0.3.1 \
+		usage-lib-0.7.0-beta.1 \
 		utf-8-0.7.6 \
 		utf8parse-0.2.2 \
 		valuable-0.1.0 \
@@ -470,25 +470,16 @@ CARGO_CRATES=	addr2line-0.21.0 \
 		windows-result-0.1.2 \
 		windows-result-0.2.0 \
 		windows-strings-0.1.0 \
-		windows-sys-0.48.0 \
 		windows-sys-0.52.0 \
 		windows-sys-0.59.0 \
-		windows-targets-0.48.5 \
 		windows-targets-0.52.6 \
-		windows_aarch64_gnullvm-0.48.5 \
 		windows_aarch64_gnullvm-0.52.6 \
-		windows_aarch64_msvc-0.48.5 \
 		windows_aarch64_msvc-0.52.6 \
-		windows_i686_gnu-0.48.5 \
 		windows_i686_gnu-0.52.6 \
 		windows_i686_gnullvm-0.52.6 \
-		windows_i686_msvc-0.48.5 \
 		windows_i686_msvc-0.52.6 \
-		windows_x86_64_gnu-0.48.5 \
 		windows_x86_64_gnu-0.52.6 \
-		windows_x86_64_gnullvm-0.48.5 \
 		windows_x86_64_gnullvm-0.52.6 \
-		windows_x86_64_msvc-0.48.5 \
 		windows_x86_64_msvc-0.52.6 \
 		winnow-0.6.20 \
 		winsafe-0.0.19 \
