--- a/graphics/mesa-devel/Makefile
+++ b/graphics/mesa-devel/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mesa
-DISTVERSION=	24.2-branchpoint-3263
-DISTVERSIONSUFFIX=	-ga8eed9cca26
+DISTVERSION=	24.2-branchpoint-3388
+DISTVERSIONSUFFIX=	-g6c84103276a
 CATEGORIES=	graphics
 PKGNAMESUFFIX=	-devel
 
