--- a/audio/yoshimi/Makefile
+++ b/audio/yoshimi/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	yoshimi
-DISTVERSION=	2.3.3
+DISTVERSION=	2.3.3.1
 CATEGORIES=	audio
-MASTER_SITES=	SF/${PORTNAME}/${DISTVERSION:R}
+MASTER_SITES=	SF/${PORTNAME}/${DISTVERSION:R:R}
 
 MAINTAINER=	yuri@FreeBSD.org
 COMMENT=	Sophisticated software synthesizer
