devel/py-xstatic-jquery-file-upload: New port
jQuery-File-Upload (XStatic packaging standard)

jQuery-File-Upload javascript library packaged for setuptools
(easy_install)/pip.

This package is intended to be used by any project that needs these
files.

It intentionally does not provide any extra code except some metadata
nor has any extra requirements. You MAY use some minimal support code
from the XStatic base package, if you like.

WWW: https://github.com/blueimp/jQuery-File-Upload

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6110,6 +6110,7 @@
     SUBDIR += py-xstatic-hogan
     SUBDIR += py-xstatic-jasmine
     SUBDIR += py-xstatic-jquery
+    SUBDIR += py-xstatic-jquery-file-upload
     SUBDIR += py-xstatic-jquery-migrate
     SUBDIR += py-xstatic-jquery-ui
     SUBDIR += py-xstatic-jquery.quicksearch
