devel/cirrus-cli: Update version 0.126.1=>0.127.0
Changelog: https://github.com/cirruslabs/cirrus-cli/releases/tag/v0.127.0

--- a/devel/cirrus-cli/Makefile
+++ b/devel/cirrus-cli/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	cirrus-cli
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.126.1
+DISTVERSION=	0.127.0
 CATEGORIES=	devel
 
 MAINTAINER=	bofh@FreeBSD.org
@@ -16,7 +16,7 @@ USE_RC_SUBR=	${PORTNAME}
 
 GO_MODULE=	github.com/cirruslabs/cirrus-cli
 GO_TARGET=	./cmd/cirrus
-GO_BUILDFLAGS=	-ldflags="-X github.com/cirruslabs/cirrus-cli/internal/version.Version=${PORTVERSION}"
+GO_BUILDFLAGS=	-ldflags="-X github.com/cirruslabs/cirrus-cli/internal/version.Version=${DISTVERSION}"
 
 SUB_FILES=	pkg-message
 
