devel/task: add port: Task runner / simpler Make alternative written in Go
Task is a task runner / build tool that aims to be simpler and easier
to use than, for example, GNU Make.

Since it's written in Go, Task is just a single binary and has no
other dependencies, which means you don't need to mess with any
complicated install setups just to use a build tool.

WWW: https://taskfile.dev/

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -8099,6 +8099,7 @@
     SUBDIR += tagref
     SUBDIR += tailor
     SUBDIR += talloc
+    SUBDIR += task
     SUBDIR += taskctl
     SUBDIR += taskflow
     SUBDIR += tass64
