databases/py-sqloxide: Add py-sqloxide 0.1.48
sqloxide wraps rust bindings for sqlparser-rs into a python package using pyO3.

The original goal of this project was to have a very fast, efficient, and
accurate SQL parser I could use for building data lineage graphs across large
code bases (think hundreds of auto-generated .sql files). Most existing sql
parsing approaches for python are either very slow or not accurate (especially
in regards to deeply nested queries, sub-selects and/or table aliases). Looking
to the rust community for support, I found the excellent sqlparser-rs crate
which is quite easy to wrap in python code.

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -852,6 +852,7 @@
     SUBDIR += py-sqlite-utils
     SUBDIR += py-sqlite3
     SUBDIR += py-sqlobject
+    SUBDIR += py-sqloxide
     SUBDIR += py-sqlparse
     SUBDIR += py-sqlrelay
     SUBDIR += py-tableschema
