devel/py-pprintpp: Add py-pprintpp 0.4.0
pprint++ is a drop-in replacement for pprint that's actually pretty.

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5420,6 +5420,7 @@
     SUBDIR += py-pox
     SUBDIR += py-poyo
     SUBDIR += py-ppft
+    SUBDIR += py-pprintpp
     SUBDIR += py-prance
     SUBDIR += py-pre-commit
     SUBDIR += py-pre-commit-hooks
