textproc/py-sphinxcontrib-django: Add py-sphinxcontrib-django 2.5
sphinxcontrib-django is a sphinx extension which improves the documentation of
Django apps.

Improvements for the output of Sphinx's autodoc for Django classes:
- List all model and form fields as class parameters
- Improve model field representations
- Link related and reverse related fields to the referenced class
- Hide irrelevant runtime information like declared_fieldsets, fieldsets and
  Meta from classes
- Add information about autogenerated methods
- Fix intersphinx mappings to Django modules
- Custom text roles to cross-reference the documentations of Django (:setting:,
  :templatetag:, :templatefilter:, :fieldlookup:) and Sphinx (:event:,
  :confval:)

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1620,6 +1620,7 @@
     SUBDIR += py-sphinxcontrib-bitbucket
     SUBDIR += py-sphinxcontrib-blockdiag
     SUBDIR += py-sphinxcontrib-devhelp
+    SUBDIR += py-sphinxcontrib-django
     SUBDIR += py-sphinxcontrib-fulltoc
     SUBDIR += py-sphinxcontrib-htmlhelp
     SUBDIR += py-sphinxcontrib-httpdomain
