archivers/rubygem-minitar0: Add rubygem-minitar0 0.12 (copied from rubygem-minitar)
- Add PORTSCOUT

--- a/archivers/Makefile
+++ b/archivers/Makefile
@@ -231,6 +231,7 @@
     SUBDIR += rubygem-libarchive
     SUBDIR += rubygem-minitar
     SUBDIR += rubygem-minitar-cli
+    SUBDIR += rubygem-minitar0
     SUBDIR += rubygem-ruby-xz
     SUBDIR += rubygem-rubyzip
     SUBDIR += rubygem-rubyzip13
