devel/py-textualeffects: Add NO_ARCH
Approved by:	portmgr (blanket)

--- a/devel/py-textualeffects/Makefile
+++ b/devel/py-textualeffects/Makefile
@@ -17,4 +17,6 @@ RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}terminaltexteffects>=0.11.0:devel/py-termina
 USES=		python
 USE_PYTHON=	autoplist pep517
 
+NO_ARCH=	yes
+
 .include <bsd.port.mk>
