--- a/devel/rubygem-pdk/Makefile
+++ b/devel/rubygem-pdk/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	pdk
 PORTVERSION=	3.3.0
+PORTREVISION=	1
 CATEGORIES=	devel rubygems
 MASTER_SITES=	RG
 
@@ -20,7 +21,7 @@ RUN_DEPENDS=	rubygem-bundler>=2.1.0,1<3.0.0,1:sysutils/rubygem-bundler \
 		rubygem-hitimes>=2.0.0:devel/rubygem-hitimes \
 		rubygem-json_pure>=2.6.3:devel/rubygem-json_pure \
 		rubygem-json-schema>=4.0:devel/rubygem-json-schema \
-		rubygem-minitar>=0.8<1:archivers/rubygem-minitar \
+		rubygem-minitar0>=0.8<1:archivers/rubygem-minitar0 \
 		rubygem-pathspec>=1.1:devel/rubygem-pathspec \
 		rubygem-tty-prompt>=0.23<1:devel/rubygem-tty-prompt \
 		rubygem-tty-spinner>=0.9<1:devel/rubygem-tty-spinner \
