devel/py-magnet2torrent: New port: Turn a bittorrent magnet links into a .torrent file
Pure python project to turn a magnet link into a .torrent file. The goal
is to do it as fast as possible.

WWW: https://github.com/JohnDoee/magnet2torrent

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -5152,6 +5152,7 @@
     SUBDIR += py-mac-vendor-lookup
     SUBDIR += py-macholib
     SUBDIR += py-magic
+    SUBDIR += py-magnet2torrent
     SUBDIR += py-mailcap-fix
     SUBDIR += py-makefun
     SUBDIR += py-manuel
