sysutils/createrepo_c: new port
createrepo_c is a C implementation of the createrepo tool, which generates
metadata for RPM package repositories. It is optimized for performance and
provides new features compared to the original createrepo written in Python.

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -254,6 +254,7 @@
     SUBDIR += cramfs
     SUBDIR += crashme
     SUBDIR += crate
+    SUBDIR += createrepo_c
     SUBDIR += cronic
     SUBDIR += cronolog
     SUBDIR += cronolog-devel
