devel/py-xstatic-svg-edit-moin: New port
svg-edit-moin 2012.11.27 (XStatic packaging standard)

svg-edit-moin javascript library packaged for setuptools (easy_install)
/ pip.

This is a modified version from svg-edit r2164 of 15 Nov. 2012 adding:
- moin save extension added
- svg-edit config contains moin save extension

This package is intended to be used by any project that needs these
files.

It intentionally does not provide any extra code except some metadata
nor has any extra requirements. You MAY use some minimal support code
from the XStatic base package, if you like.

WWW: https://code.google.com/archive/p/svg-edit/

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6120,6 +6120,7 @@
     SUBDIR += py-xstatic-rickshaw
     SUBDIR += py-xstatic-roboto-fontface
     SUBDIR += py-xstatic-smart-table
+    SUBDIR += py-xstatic-svg-edit-moin
     SUBDIR += py-xstatic-spin
     SUBDIR += py-xstatic-term.js
     SUBDIR += py-xstatic-tv4
