sysutils/zrepl-dsh2dsh: update to 0.8.4
Changelog: https://github.com/dsh2dsh/zrepl/releases/tag/v0.8.4

Add periodic daily script.

PR:		281797

--- a/sysutils/zrepl-dsh2dsh/files/pkg-message.in
+++ b/sysutils/zrepl-dsh2dsh/files/pkg-message.in
@@ -7,6 +7,9 @@ SETUP BEFORE FIRST USE:
 - Create the log file /var/log/zrepl.log:
   # service newsyslog restart
 - Modify the %%PREFIX%%/etc/zrepl/zrepl.yml configuration file
+- Create ZFS datasets like:
+  # zfs create -o mountpoint=none -o readonly=on zdisk/zrepl
+  # zfs create zdisk/zrepl/localhost
 - Enable the zrepl daemon to start automatically at boot:
   # sysrc zrepl_enable="YES"
 - Start the zrepl daemon:
