--- a/x11/xfishtank/Makefile
+++ b/x11/xfishtank/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	xfishtank
 PORTVERSION=	2.5
+PORTREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	DEBIAN
 MASTER_SITE_SUBDIR=	pool/main/x/xfishtank/
