--- a/devel/transient-devel/Makefile
+++ b/devel/transient-devel/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	transient
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.7.5-14
-DISTVERSIONSUFFIX=	-g5fcd713
+DISTVERSION=	0.7.6
+DISTVERSIONSUFFIX=
 CATEGORIES=	devel elisp
 PKGNAMESUFFIX=	-devel${EMACS_PKGNAMESUFFIX}
 
