--- a/devel/ghub-devel/Makefile
+++ b/devel/ghub-devel/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	ghub
 DISTVERSIONPREFIX=	v
-DISTVERSION=	4.1.0-1
-DISTVERSIONSUFFIX=	-g6f21dd4
+DISTVERSION=	4.1.1
+DISTVERSIONSUFFIX=
 CATEGORIES=	devel elisp
 PKGNAMESUFFIX=	-devel${EMACS_PKGNAMESUFFIX}
 
