devel/py-xstatic-pygments: New port
Pygments 2.9.0 (XStatic packaging standard)

Pygments’ builtin CSS packaged for setuptools (easy_install)/pip.

This package is intended to be used by any project that needs these
files.

It intentionally does not provide any extra code except some metadata
nor has any extra requirements. You MAY use some minimal support code
from the XStatic base package, if you like.

WWW:	https://pygments.org/

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6117,6 +6117,7 @@
     SUBDIR += py-xstatic-jsencrypt
     SUBDIR += py-xstatic-mdi
     SUBDIR += py-xstatic-objectpath
+    SUBDIR += py-xstatic-pygments
     SUBDIR += py-xstatic-rickshaw
     SUBDIR += py-xstatic-roboto-fontface
     SUBDIR += py-xstatic-smart-table
