devel/RStudio: Revert "feat(create-turbo): apply official-starter transform"
This reverts commit 52c0456dd5ec259ac94ee401db79c7ad3569f914.

I have no idea what lead to this commit into devel/RStudio and
lang/rust-nightly to be made.

--- a/lang/rust/Makefile
+++ b/lang/rust/Makefile
@@ -138,9 +138,9 @@ DISTFILES:=	${DISTFILES:M*\:src} \
 
 post-patch:
 	@${REINPLACE_CMD} 's,gdb,${LOCALBASE}/bin/gdb,' ${WRKSRC}/src/etc/rust-gdb
-#.if defined(NIGHTLY_DATE)
-#	@${REINPLACE_CMD} 's/"rustfmt"/"nothx"/' ${WRKSRC}/src/stage0.json
-#.endif
+.if defined(NIGHTLY_DATE)
+	@${REINPLACE_CMD} 's/"rustfmt"/"nothx"/' ${WRKSRC}/src/stage0.json
+.endif
 # Disable vendor checksums
 	@${REINPLACE_CMD} 's,"files":{[^}]*},"files":{},' \
 		${CARGO_VENDOR_DIR}/*/.cargo-checksum.json
