sysutils/createrepo_c: fix dependency on libxml2, more cleanups
Reported by:	diizzy

--- a/sysutils/createrepo_c/Makefile
+++ b/sysutils/createrepo_c/Makefile
@@ -12,17 +12,19 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 LIB_DEPENDS=	librpm.so:archivers/rpm4 \
 		libcurl.so:ftp/curl \
 		libmodulemd.so:misc/libmodulemd \
+		libpopt.so:devel/popt \
 		libzck.so:archivers/zchunk \
 		libzstd.so:archivers/zstd
 TEST_DEPENDS=	bash:shells/bash
 
-USES=		cmake pkgconfig shebangfix sqlite
+USES=		cmake:testing gnome pathfix pkgconfig shebangfix sqlite ssl
 
-USE_GNOME=	libxml2
+USE_GNOME=	glib20 libxml2
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	rpm-software-management
 
+CMAKE_ON=	CMAKE_DISABLE_FIND_PACKAGE_Doxygen
 CMAKE_OFF=	ENABLE_PYTHON
 
 SHEBANG_FILES=	tests/run_tests.sh.in
@@ -31,16 +33,18 @@ USE_LDCONFIG=	yes
 
 post-patch:
 	${REINPLACE_CMD} \
-		'/pkg_check_modules/s|REQUIRED|REQUIRED IMPORTED_TARGET|' \
+		-e '/pkg_check_modules/s|REQUIRED|REQUIRED IMPORTED_TARGET|' \
+		-e 's|EXCLUDE_FROM_ALL||' \
 		${WRKSRC}/CMakeLists.txt
 	for m in GLIB2 GIO GTHREAD2 LIBMODULEMD LZMA SQLITE3 RPM ZCK ZSTD; do \
 		${REINPLACE_CMD} \
 			"s/\$${$${m}_LIBRARIES}/PkgConfig::$${m}/" \
-			${WRKSRC}/src/CMakeLists.txt \
+			${WRKSRC}/src/CMakeLists.txt; \
+	done
+	for m in GLIB2; do \
+		${REINPLACE_CMD} \
+			"s/\$${$${m}_LIBRARIES}/PkgConfig::$${m}/" \
 			${WRKSRC}/tests/CMakeLists.txt; \
 	done
-
-do-test:
-	cd ${CONFIGURE_WRKSRC} && ${MAKE_CMD} tests && ${MAKE_CMD} test
 
 .include <bsd.port.mk>
