x11-fonts/py-fclist-cffi: Add new port
Python cffi bridge to fontconfig's FcFontList/FcFontMatch.

Useful for python programs that need to query information about fonts
installed in the system (use this instead of parsing fc-list output).
Requires the fontconfig shared library installed in a directory that
the cffi module can find.

https://github.com/MonsieurV/python-fclist

--- a/x11-fonts/Makefile
+++ b/x11-fonts/Makefile
@@ -288,6 +288,7 @@
     SUBDIR += py-compreffor
     SUBDIR += py-cu2qu
     SUBDIR += py-defcon
+    SUBDIR += py-fclist-cffi
     SUBDIR += py-fontMath
     SUBDIR += py-fontfeatures
     SUBDIR += py-fontmake
