--- a/x11-wm/picom/Makefile
+++ b/x11-wm/picom/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	picom
 DISTVERSIONPREFIX=	v
 DISTVERSION=	12.1
+PORTREVISION=	1
 CATEGORIES=	x11-wm
 
 MAINTAINER=	yukiteruamano@volfread.xyz
