--- a/databases/rocksdb-jni/Makefile
+++ b/databases/rocksdb-jni/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	rocksdb-jni
 DISTVERSIONPREFIX=	v
 DISTVERSION=	9.6.1
+PORTREVISION=	1
 CATEGORIES=	databases java
 MASTER_SITES=	https://rocksdb-deps.s3-us-west-2.amazonaws.com/jars/:deps
 DISTFILES=	assertj-core-2.9.0.jar:deps \
@@ -19,10 +20,10 @@ LICENSE_COMB=	dual
 LICENSE_FILE_APACHE20=	${WRKSRC}/../LICENSE.Apache
 LICENSE_FILE_GPLv2=	${WRKSRC}/../COPYING
 
-BUILD_DEPENDS=	rocksdb>0:databases/rocksdb \
-		googletest>0:devel/googletest
+BUILD_DEPENDS=	googletest>0:devel/googletest
+LIB_DEPENDS=	librocksdb.so:databases/rocksdb # librocksdbjni.so in the rocksdb.jar file is linked to librocksdb.so
 
-USES=		cmake compiler:c++17-lang localbase
+USES=		cmake compiler:c++17-lang localbase:ldflags
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	facebook
@@ -41,6 +42,7 @@ CMAKE_ARGS=	-DCMAKE_PROJECT_VERSION=${DISTVERSION} \
 CXXFLAGS+=	-I${WRKSRC}/.. \
 		-DOS_FREEBSD \
 		-DROCKSDB_PLATFORM_POSIX
+LDFLAGS+=	-lrocksdb
 
 #MAKE_ENV+=	JAVA_HOME=${JAVA_HOME}
 BINARY_ALIAS=	java=${JAVA_HOME}/bin/java
