x11-wm/hyprland: update to 0.44.0
Changes:	https://github.com/hyprwm/Hyprland/releases/tag/v0.44.0
Reported by:	GitHub (watch releases)

--- a/x11-toolkits/aquamarine/Makefile
+++ b/x11-toolkits/aquamarine/Makefile
@@ -1,7 +1,11 @@
 PORTNAME=	aquamarine
 DISTVERSIONPREFIX=	v
 DISTVERSION=	0.4.1
+PORTREVISION=	1
 CATEGORIES=	x11-toolkits
+
+PATCH_SITES=	https://github.com/${GH_ACCOUNT}/${GH_PROJECT}/commit/
+PATCHFILES+=	8b728612a9df.patch:-p1 # https://github.com/hyprwm/aquamarine/pull/86
 
 MAINTAINER=	jbeich@FreeBSD.org
 COMMENT=	Very light linux rendering backend library
