x11-fonts/py-FindSystemFontsFilename: Add new port
This Python module allows you to get the font filename on your system.
It will collect TrueType (.ttf), OpenType (.otf), TrueType Collection (.ttc)
and OpenType Collection (.otc) font format.

https://github.com/moi15moi/FindSystemFontsFilename/

--- a/x11-fonts/Makefile
+++ b/x11-fonts/Makefile
@@ -278,6 +278,7 @@
     SUBDIR += proggy_fonts
     SUBDIR += proggy_fonts-ttf
     SUBDIR += psftools
+    SUBDIR += py-FindSystemFontsFilename
     SUBDIR += py-QtAwesome
     SUBDIR += py-afdko
     SUBDIR += py-axisregistry
