--- a/audio/fluida-lv2/Makefile
+++ b/audio/fluida-lv2/Makefile
@@ -1,12 +1,11 @@
 PORTNAME=	fluida
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.8
-PORTREVISION=	1
+DISTVERSION=	0.9.3
 CATEGORIES=	audio
 PKGNAMESUFFIX=	-lv2
 MASTER_SITES=	https://github.com/brummer10/Fluida.lv2/releases/download/v${DISTVERSION}/
 DIST_SUBDIR=	${PORTNAME}
-DISTNAME=	Fluida_${DISTVERSION}
+DISTNAME=	Fluida.lv2-${DISTVERSIONFULL}-src
 
 MAINTAINER=	yuri@FreeBSD.org
 COMMENT=	Fluidsynth as LV2 plugin
@@ -19,10 +18,12 @@ BUILD_DEPENDS=	lv2>0:audio/lv2 \
 		xxd:editors/vim
 LIB_DEPENDS=	libfluidsynth.so:audio/fluidsynth
 
-USES=		compiler:c++11-lang gettext-runtime gmake gnome localbase pkgconfig xorg
-USE_GNOME=	cairo
+USES=		compiler:c++11-lang gettext-runtime gmake gnome localbase pkgconfig tar:xz xorg
+USE_GNOME=	cairo glib20
 USE_XORG=	x11
 USE_BINUTILS=	yes # linking needs some GNU features, fails on 12 without this, see https://github.com/brummer10/GxPlugins.lv2/issues/9
+
+WRKSRC=		${WRKDIR}/Fluida.lv2-${DISTVERSIONFULL}
 
 ALL_TARGET=
 
