www/minio: Update version 2024-03-03T17-50-39Z=>2024-03-05T04-48-44Z
- Fix CPE_VERSION

Changelog: https://github.com/minio/minio/releases/tag/RELEASE.2024-03-05T04-48-44Z

--- a/www/minio/Makefile
+++ b/www/minio/Makefile
@@ -10,10 +10,11 @@ WWW=		https://minio.io/
 LICENSE=	AGPLv3
 
 USES=		compiler cpe go:1.21,modules
-GH_TAGNAME=	RELEASE.2024-03-03T17-50-39Z
+GH_TAGNAME=	RELEASE.2024-03-05T04-48-44Z
+CPE_VERSION=	${GH_TAGNAME}
 USE_RC_SUBR=	${PORTNAME}
 
-COMMIT_ID=	09b0e7133ddcb2e2a26a36f2caed59a7b7bc7c88
+COMMIT_ID=	1b5f28e99b145b0e3a5d99d1801a9b5cbfbdb091
 
 GO_MODULE=	github.com/minio/minio@v0.0.0-${DISTVERSION:S/.//g}-${COMMIT_ID:C/^(.{12}).*/\1/}
 GO_BUILDFLAGS=	-ldflags=' \
