devel/py-grimoirelab-toolkit: New port
Toolkit of common functions used across GrimoireLab projects

This package provides a library composed by functions widely used in
other GrimoireLab projects. These function deal with date handling,
introspection, URIs/URLs, among other topics.

WWW: https://github.com/chaoss/grimoirelab-toolkit/

Sponsored by:	The FreeBSD Foundation

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4924,6 +4924,7 @@
     SUBDIR += py-graphql-relay
     SUBDIR += py-graphql-relay2
     SUBDIR += py-greenlet
+    SUBDIR += py-grimoirelab-toolkit
     SUBDIR += py-grizzled
     SUBDIR += py-grpc-google-iam-v1
     SUBDIR += py-grpc-stubs
