--- a/devel/nextpnr/Makefile
+++ b/devel/nextpnr/Makefile
@@ -1,9 +1,12 @@
 PORTNAME=	nextpnr
 DISTVERSIONPREFIX=	${PORTNAME}-
 DISTVERSION=	0.7
-PORTREVISION=	1
+PORTREVISION=	2
 PORTEPOCH=	1
 CATEGORIES=	devel
+
+PATCH_SITES=	https://github.com/YosysHQ/nextpnr/commit/
+PATCHFILES=	f085950383155a745cf2e3c0f28c468d01ff5fd7.patch:-p1
 
 MAINTAINER=	manu@FreeBSD.org
 COMMENT=	Portable FPGA place and route tool
