--- a/x11/xfce4-whiskermenu-plugin/Makefile
+++ b/x11/xfce4-whiskermenu-plugin/Makefile
@@ -16,8 +16,8 @@ USES=		cmake compiler:c++14-lang gettext-tools gnome localbase \
 USE_GNOME=	cairo gdkpixbuf2 gtk30
 USE_XFCE=	garcon libexo panel xfconf
 
-OPTIONS_DEFINE=		ACCOUNTS_SERVICE WAYLAND LTO NLS
-OPTIONS_DEFAULT=	ACCOUNTS_SERVICE WAYLAND LTO
+OPTIONS_DEFINE=		ACCOUNTS_SERVICE LTO NLS WAYLAND
+OPTIONS_DEFAULT=	ACCOUNTS_SERVICE LTO WAYLAND
 OPTIONS_SUB=		yes
 
 ACCOUNTS_SERVICE_DESC=	Enable AccountsService support
@@ -25,12 +25,12 @@ ACCOUNTS_SERVICE_DESC=	Enable AccountsService support
 ACCOUNTS_SERVICE_LIB_DEPENDS=	libaccountsservice.so:sysutils/accountsservice
 ACCOUNTS_SERVICE_CMAKE_BOOL=	ENABLE_ACCOUNTS_SERVICE
 
-WAYLAND_LIB_DEPENDS=	libgtk-layer-shell.so:x11-toolkits/gtk-layer-shell
-WAYLAND_CMAKE_BOOL=	ENABLE_GTK_LAYER_SHELL
-
 LTO_CMAKE_BOOL=	ENABLE_LINK_TIME_OPTIMIZATION
 
 NLS_USES=	gettext-runtime
+
+WAYLAND_LIB_DEPENDS=	libgtk-layer-shell.so:x11-toolkits/gtk-layer-shell
+WAYLAND_CMAKE_BOOL=	ENABLE_GTK_LAYER_SHELL
 
 post-patch-NLS-off:
 	@${REINPLACE_CMD} '/add_subdirectory(po)/d' ${WRKSRC}/CMakeLists.txt
