devel/llvm22: 22.1.0-RC1
The release announcement can be found at:
    https://discourse.llvm.org/t/llvm-22-1-0-rc1-released/89479

Sponsored by:	DARPA, AFRL

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1583,6 +1583,7 @@
     SUBDIR += llvm19
     SUBDIR += llvm20
     SUBDIR += llvm21
+    SUBDIR += llvm22
     SUBDIR += lm4tools
     SUBDIR += lmdbg
     SUBDIR += lndir
