--- a/devel/llvm22/Makefile.COMMANDS
+++ b/devel/llvm22/Makefile.COMMANDS
@@ -8,6 +8,7 @@ LLVM_COMMANDS=	\
 		llvm-as \
 		llvm-bcanalyzer \
 		llvm-bitcode-strip \
+		llvm-cas \
 		llvm-cat \
 		llvm-cfi-verify \
 		llvm-cgdata \
@@ -41,6 +42,8 @@ LLVM_COMMANDS=	\
 		llvm-nm \
 		llvm-objcopy \
 		llvm-objdump \
+		llvm-offload-binary \
+		llvm-offload-wrapper \
 		llvm-opt-report \
 		llvm-otool \
 		llvm-pdbutil \
@@ -138,7 +141,10 @@ LLDB_COMMANDS=	\
 		lldb-argdumper \
 		lldb-dap \
 		lldb-instr \
-		lldb-server
+		lldb-mcp \
+		lldb-server \
+		lldb-tblgen \
+		yaml2macho-core
 
 MLIR_COMMANDS=	\
 		mlir-cat \
