--- a/graphics/py-pandarm/files/patch-pyproject.toml
+++ b/graphics/py-pandarm/files/patch-pyproject.toml
@@ -1,4 +1,4 @@
---- pyproject.toml.orig	2025-12-29 20:33:13 UTC
+--- pyproject.toml.orig	2025-11-28 23:32:04 UTC
 +++ pyproject.toml
 @@ -1,7 +1,7 @@ build-backend = "setuptools.build_meta"
  [build-system]
@@ -9,16 +9,25 @@
  
  [tool.setuptools_scm]
  
-@@ -22,7 +22,7 @@ classifiers = [
-     "Programming Language :: Python :: 3",
-     "License :: OSI Approved :: GNU Affero General Public License v3"
+@@ -9,7 +9,7 @@ dependencies = [
+ name = "pandarm"
+ dynamic = ["version"]
+ dependencies = [
+-        "numpy >=2",
++        "numpy",
+         "pandas >=2",
+         "geopandas",
+         "scikit-learn >=0.18",
+@@ -19,7 +19,7 @@ classifiers = [
+         "Programming Language :: Python :: 3",
+         "License :: OSI Approved :: GNU Affero General Public License v3"
  ]
 -license-files = ["LICENSE"]
 +license = {file = "LICENSE"}
  requires-python = ">=3.10"
  
- [project.urls]
-@@ -71,4 +71,4 @@ exclude_lines = [
+ [tool.setuptools.packages.find]
+@@ -74,4 +74,4 @@ exclude_lines = [
      "raise NotImplementedError",
      "except ModuleNotFoundError:",
      "except ImportError",
