graphics/libheif: Update to 1.20.1
Release notes: https://github.com/strukturag/libheif/releases/tag/v1.20.0
               https://github.com/strukturag/libheif/releases/tag/v1.20.1

--- a/graphics/libheif/Makefile
+++ b/graphics/libheif/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	libheif
-DISTVERSION=	1.19.8
-PORTREVISION=	7
+DISTVERSION=	1.20.1
 CATEGORIES=	graphics
 MASTER_SITES=	https://github.com/strukturag/${PORTNAME}/releases/download/v${DISTVERSION}/
 
@@ -51,6 +50,8 @@ DAV1D_CMAKE_BOOL=	WITH_DAV1D
 
 EXAMPLES_LIB_DEPENDS=	libpng16.so:graphics/png \
 			libtiff.so:graphics/tiff
+EXAMPLES_USES=		sdl
+EXAMPLES_USE=		SDL=sdl2
 EXAMPLES_CMAKE_BOOL=	WITH_EXAMPLES
 EXAMPLE_IMPLIES=	JPEG
 
